--- a/cdc-admin/package.json
+++ b/cdc-admin/package.json
@@ -7,6 +7,8 @@
     "pubsub-js": "^1.7.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-router": "^2.7.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2"
   },
   "scripts": {
